Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/7154127/T7154127.out
T7154127.java:20:49: compiler.err.prob.found.req: (compiler.misc.incompatible.upper.bounds: U, T7154127.B<Y>,T7154127.E)
1 error
